--- a/war/index.html
+++ b/war/index.html
@@ -13,4 +13,16 @@
   </head>
 
   <body>
- 
+    <h1>Howdy App Engine!</h1>
+	
+    <table>
+      <tr>
+        <td colspan="2" style="font-weight:bold;">Available Servlets:</td>        
+      </tr>
+      <tr>
+        <td><a href="lifeplanning">Enter App</a></td>
+        <td><a href="priorities-chart.htm">Pie</a></td>
+		<td><a href="historic-chart.htm">Historic</a></td>
+		<td><a href="plan-achievement-chart.htm">Plan Achievement</a></td>
+      </tr>
+  
