use PacketContainer api

--- a/war/index.html
+++ b/war/index.html
@@ -25,4 +25,6 @@
 		<td><a href="historic-chart.htm">Historic</a></td>
 		<td><a href="plan-achievement-chart.htm">Plan Achievement</a></td>
       </tr>
-  
+    </table>
+  </body>
+</html>
